tests/bad/structs/4.lat
class A {
    int z;
}

int main() {
    A a = new int;
    return 0;
}